[project]
name = "multiuser_chat_system"
version = "0.1.0"
description = "Multi-user chat system powered by LLMs, orchestrated with LangGraph for conversational workflows with memory."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "langchain",
    "Langgraph",
    "langchain-openai",
    "langchain-community",
    "langchain-classic",
    "langchain-chroma",
    "langgraph-checkpoint-sqlite",
    "chromadb",
    "python-dotenv",
    "streamlit",
    "pydantic",
    "pyPDF2",
]
